--- a/src/component/LogInBoard/LogInBoard.module.scss
+++ b/src/component/LogInBoard/LogInBoard.module.scss
@@ -7,7 +7,7 @@
     border-radius: 5px;
     margin-top: 100px;
     h1{
-        color: #FFFFFF;
+        color: var(--text-color);
         font-size: 32px;
     }
     .input-email,.input-password{
@@ -37,19 +37,19 @@
             width: 100%;
             height: 48px;
             font-size: 15px;
-            background-color: #333333;
-            border: none;
+            background-color: rgba(0,0,0,.4);
             border-radius: 5px;
+            border: 1px solid gray;
             color: #FFFFFF;
             padding: 17px 10px 5px 10px;
         }
         input:focus ~ .title{
             top: 5px;
-            font-size: 14px;
+            font-size: 13px;
         }
         input:valid ~ .title{
             top: 5px;
-            font-size: 14px;
+            font-size: 13px;
         }
         .text-valid{
             position: relative;
