--- a/src/component/Slider/Slider.module.scss
+++ b/src/component/Slider/Slider.module.scss
@@ -2,11 +2,14 @@
     width: 100%;
     margin-top: 50px;
     padding: 0 60px;
+    &:hover .title-slide .header-title{
+        color: #fff;
+    }
     .title-slide{
         margin-bottom: -10px;
             .header-title{
                 height: 30px;
-                color: var(--text-color);   
+                color: rgb(187, 187, 187);   
                 font-size: 22px;
                 font-weight: 500;
             }
